--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -62,9 +62,15 @@
         padding: 80px 0;
     }
 
-    .releted-course .single-course {
-        padding: 10px;
+    .course-preview-details {
+        border-radius: 0px 0px 10px 10px;
     }
+
+    .inner-course::before,
+    .inner-course {
+        border-radius: 10px 10px 0px 0px;
+    }
+
 }
 
 @media (max-width: 767px) {
@@ -248,6 +254,14 @@
     .modal-dialog-centered {
         margin: 20px auto;
     }
+
+    .footer-left .tagline {
+        display: none;
+    }
+
+    .footer-logo {
+        margin: 0;
+    }
 }
 
 @media (max-width: 434px) {
@@ -346,6 +360,14 @@
 
     .nice-designn .nice-select {
         white-space: pre-wrap
+    }
+
+    .for-loginmethod .modal-body {
+        padding: 20px 10px;
+    }
+
+    .log-into span a {
+        display: block;
     }
 }
 
