--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ Table of Content
 /*______________________ Global stlye ___________________*/
 
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i,900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Hind+Siliguri:300,400,500,600,700&display=swap');
 
 *,
 *::after,
@@ -133,6 +134,15 @@ img {
     background: #ffffff24;
 }
 
+.header-buttons .site-button {
+    font-size: 18px;
+    padding: 6px 25px;
+}
+
+.course-meta i {
+    transform: rotate(180deg);
+}
+
 .site-button:hover {
     border-color: transparent;
     background: #E30045;
@@ -226,19 +236,19 @@ li.has-submenu {
 .hero-area .title {
     font-size: 60px;
     color: #fff;
-    font-weight: 700;
+    font-weight: 800;
     text-shadow: 1px 1px 5px #323647;
 }
 
 .hero-area .sub-title {
     font-size: 25px;
     color: #fff;
-    font-weight: 500;
+    font-weight: 400;
     margin-top: 10px;
 }
 
 .hero-area .sub-title span {
-    color: #FFC600;
+    font-weight: 600;
 }
 
 .cd-headline.clip span {
@@ -447,7 +457,7 @@ li.has-submenu {
 .call-button {
     color: #272727;
     font-weight: 800;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .call-button:hover {
@@ -751,6 +761,7 @@ header.header-area.page {
     text-align: left;
     text-decoration: none;
     padding: 10px 0;
+    font-family: 'Hind Siliguri', sans-serif;
 }
 
 .accordion .card-header {
@@ -774,6 +785,7 @@ header.header-area.page {
     color: #414141;
     font-size: 16px;
     padding-bottom: 10px;
+    font-family: 'Hind Siliguri',sans-serif;
 }
 
 .accordion .card:last-child {
@@ -784,7 +796,8 @@ header.header-area.page {
     position: relative;
 }
 
-.accordion .subtitle>button::after {
+.accordion .subtitle>button::after,
+.accordion .subtitle>a::after {
     content: "\eab2";
     font-family: 'IcoFont';
     position: absolute;
@@ -795,11 +808,17 @@ header.header-area.page {
     font-weight: 700;
 }
 
-
-
 .accordion .subtitle>button[aria-expanded="true"]:after {
     content: "\eab9";
     color: #E30045
+}
+
+.accordion.course .subtitle>a::after {
+    content: "\eab2";
+}
+
+.accordion.course .subtitle>a[aria-expanded="true"]:after {
+    content: "\eab9";
 }
 
 .accordion .subtitle>button[aria-expanded="true"],
@@ -811,7 +830,7 @@ header.header-area.page {
     color: #383838;
 }
 
-.accordion.course .subtitle>button[aria-expanded="true"]:after {
+.accordion.course .subtitle>a[aria-expanded="true"]:after {
     color: #383838
 }
 
@@ -1042,8 +1061,16 @@ header.header-area.page {
     position: relative;
     background-color: #F5F5F5;
     border: 1px solid rgba(0, 0, 0, .2);
-    border-radius: .3rem;
+    border-radius: 10px;
     outline: 0;
+}
+
+.for-loginmethod .modal.fade .modal-dialog {
+    transition: -webkit-transform .2s ease-out;
+    transition: transform .2s ease-out;
+    transition: transform .2s ease-out, -webkit-transform .2s ease-out;
+    -webkit-transform: translate(0, -50px);
+    transform: translate(0, -50px);
 }
 
 .login-content h4 {
@@ -1281,7 +1308,7 @@ header.header-area.page {
     margin-top: 0;
 }
 
-.accordion.course button.btn.btn-link {
+.accordion.course .btn.btn-link {
     color: #383838;
     border-color: transparent;
     padding: 17px 0;
@@ -1486,3 +1513,133 @@ header.header-area.page {
 .navigation__button:hover .navigation__icon:after {
     top: 13px;
 }
+
+.for-loginmethod .modal-header .close {
+    padding: 6px 10px;
+}
+
+/* releted course css */
+
+.releted-course .title {
+    font-weight: 800;
+}
+
+.related-course-carousel {
+    margin-top: 25px;
+    position: relative;
+}
+
+.related-course-carousel .owl-nav div {
+    height: 50px;
+    width: 50px;
+    font-size: 30px;
+    display: inline-block;
+    text-align: center;
+    line-height: 50px;
+    background: #ffff;
+    box-shadow: 0 0 10px #ddd;
+    border-radius: 50%;
+    position: absolute;
+    left: -25px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.related-course-carousel .owl-nav div.owl-next {
+    left: auto;
+    right: -25px;
+}
+
+.related-course-carousel .owl-nav div.disabled {
+    display: none;
+}
+
+.for-loginmethod.payment-option .modal-dialog {
+    max-width: 750px;
+    width: 750px;
+}
+
+/* payment popup */
+.payment-option .modal-content {
+    background: #EDE8ED;
+}
+
+.payment-option {
+    position: relative;
+}
+
+payment-option .login-us.trxid input {}
+
+.payment-gatway .login-us.trxid input {
+    border-radius: 40px;
+    margin: 0;
+    padding: 12px 15px;
+}
+
+.payment-gatway .try-thisfield {
+    position: relative;
+    margin-top: 35px;
+    margin-bottom: 30px;
+}
+
+.payment-gatway .try-thisfield button {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    font-size: 18px;
+    border: 0px;
+    background: #D20F66;
+    color: #fff;
+    font-weight: 600;
+    width: 110px;
+    height: 40px;
+    border-radius: 40px;
+}
+
+.payment-option .login-content h4 {
+    margin-top: 36px;
+}
+
+.login-us {}
+
+.payment-gatway .login-us {
+    margin-top: 15px;
+}
+
+.price span {
+    font-size: 40px;
+    padding: 20px 0;
+}
+
+.payment-option .modal-body {
+    padding: 15px !important;
+    padding-top: 10px !important;
+}
+
+.for-loginmethod.payment-option .modal-header .close {
+    position: absolute;
+    right: -10px;
+    top: -15px;
+    z-index: 99;
+    background: #363636;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    padding: 0;
+    opacity: 1;
+    color: #fff;
+    border-radius: 50%;
+    border: 2px solid #fff;
+}
+
+.for-loginmethod.payment-option .modal-header .close span {
+    padding: 0;
+    line-height: 0;
+    font-size: 20px;
+    margin: 0;
+}
+
+.for-loginmethod.payment-option .modal.fade .modal-dialog {
+    -webkit-transform: translate(0, -20px);
+    transform: translate(0, -20px);
+    }
