--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -466,10 +466,11 @@ li.has-submenu {
 .fb-button {
     background: #4267B1;
     color: #fff;
-    padding: 16px 32px;
+    padding: 16px 20px;
     border-radius: 40px;
     margin-left: 30px;
     font-weight: 800;
+    font-size: 18px;
 }
 
 .fb-button span {
@@ -1077,8 +1078,6 @@ header.header-area.page {
     transition: -webkit-transform .2s ease-out;
     transition: transform .2s ease-out;
     transition: transform .2s ease-out, -webkit-transform .2s ease-out;
-    -webkit-transform: translate(0, -50px);
-    transform: translate(0, -50px);
 }
 
 .login-content h4 {
@@ -1645,11 +1644,6 @@ payment-option .login-us.trxid input {}
     line-height: 0;
     font-size: 20px;
     margin: 0;
-}
-
-.for-loginmethod.payment-option .modal.fade .modal-dialog {
-    -webkit-transform: translate(0, -20px);
-    transform: translate(0, -20px);
 }
 
 .for-loginmethod.payment-option .price i {
