--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -907,8 +907,9 @@ header.header-area.page {
 
 .nav.dashboard a {
     color: #272727;
-    font-weight: 900;
-    padding: 10px 15px;
+    font-weight: 700;
+    padding: 12px 15px;
+    font-size: 16px;
 }
 
 .nav.dashboard li {
