--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,7 +303,7 @@ li.has-submenu {
 
 .single-course .title {
     font-size: 25px;
-    font-weight: 800;
+    font-weight: 900;
     color: #272727;
     margin: 20px 0;
     margin-bottom: 15px;
@@ -668,7 +668,7 @@ header.header-area.page {
 
 .single-video-left .play-btn {
     font-size: 27px;
-    color: #414141;
+    color: #5f5f5f;
     display: inline-block;
 }
 
@@ -1288,15 +1288,18 @@ header.header-area.page {
     position: relative;
 }
 
-.rocket-by a.active::after {
+.rocket-by a.active::after,
+.rocket-by a:hover::after {
     position: absolute;
-    bottom: 0;
+    bottom: -2px;
     content: "";
     background: #E30045;
     width: 100%;
-    height: 2px;
+    height: 3px;
     left: 0;
 }
+
+
 
 .site-button {
     position: relative;
@@ -1603,6 +1606,10 @@ payment-option .login-us.trxid input {}
     width: 110px;
     height: 40px;
     border-radius: 40px;
+}
+
+.payment-gatway .try-thisfield button:hover {
+    background: #9C0333;
 }
 
 .payment-option .login-content h4 {
