--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,5 +1,21 @@
-@media (max-width: 1200px) {
-    
+@media (max-width: 1199px) {
+    .fb-button {
+        margin-left: 25px;
+        font-size: 16px;
+        padding: 16px 12px;
+    }
+
+    .call-button {
+        font-size: 16px;
+    }
+
+    .site-btn.course {
+        font-size: 18px;
+        width: 200px;
+        height: 50px;
+        line-height: 50px;
+        margin-top: 20px;
+    }
 }
 @media (max-width: 991px) {
    .header-buttons .site-button {
