--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -114,6 +114,19 @@
 
 @media (max-width: 767px) {
 
+    .course-video.course-inner-page .course-video-content {
+        margin-right: 0;
+    }
+
+    .course-inner-page .embed-responsive {
+        width: 100%;
+    }
+
+    .course-inner-page .tab-video {
+        margin: 0;
+        margin-left: 7px;
+    }
+
     .navigation__button {
         position: relative;
         z-index: 99;
